@@ -18,6 +18,7 @@ import org.testcontainers.shaded.org.checkerframework.checker.units.qual.A;
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.Optional;
 import java.util.stream.IntStream;
 
@@ -474,15 +475,16 @@ class PlayerServiceTest extends PersistentTestBase {
                         Player.builder()
                                 .name("Player " + i)
                                 .email("player" + i + "@example.com")
+                                .glicko(1000.0 + i) // Add Glicko ratings for sorting
                                 .build()))
-                .toList();
+                .collect(Collectors.toList());
 
         // Fetch page 0 with a size of 5
-        Player[] paginatedPlayers = playerService.pagination(0, 5);
+        List<Player> paginatedPlayers = playerService.pagination(0, 5);
 
-        assertEquals(5, paginatedPlayers.length);
-        assertEquals(players.get(0).getId(), paginatedPlayers[0].getId()); // First player on page 0
-        assertEquals(players.get(4).getId(), paginatedPlayers[4].getId()); // Last player on page 0
+        assertEquals(5, paginatedPlayers.size());
+        assertEquals(players.get(10 - 1).getId(), paginatedPlayers.get(0).getId()); // First player on page 0 (highest Glicko)
+        assertEquals(players.get(6 - 1).getId(), paginatedPlayers.get(4).getId()); // Last player on page 0
     }
 
     @Test
@@ -493,23 +495,24 @@ class PlayerServiceTest extends PersistentTestBase {
                         Player.builder()
                                 .name("Player " + i)
                                 .email("player" + i + "@example.com")
+                                .glicko(1000.0 + i) // Add Glicko ratings for sorting
                                 .build()))
-                .toList();
+                .collect(Collectors.toList());
 
         // Fetch page 0 with a size of 10
-        Player[] paginatedPlayers = playerService.pagination(0, 10);
+        List<Player> paginatedPlayers = playerService.pagination(0, 10);
 
-        assertEquals(players.size(), paginatedPlayers.length);
-        assertEquals(players.get(0).getId(), paginatedPlayers[0].getId()); // First player
-        assertEquals(players.get(4).getId(), paginatedPlayers[4].getId()); // Last player
+        assertEquals(players.size(), paginatedPlayers.size());
+        assertEquals(players.get(5 - 1).getId(), paginatedPlayers.get(0).getId()); // First player (highest Glicko)
+        assertEquals(players.get(1 - 1).getId(), paginatedPlayers.get(4).getId()); // Last player
     }
 
     @Test
     void testPagination_NoPlayers() {
         // Fetch page 0 with a size of 5 when there are no players
-        Player[] paginatedPlayers = playerService.pagination(0, 5);
+        List<Player> paginatedPlayers = playerService.pagination(0, 5);
 
-        assertEquals(0, paginatedPlayers.length);
+        assertEquals(0, paginatedPlayers.size());
     }
 
     @Test
@@ -530,23 +533,36 @@ class PlayerServiceTest extends PersistentTestBase {
     }
 
     @Test
-    void testPagination_SpecificRange() {
+    void testPagination_SpecificRangeAndGlickoSorting() {
         // Setup data: Create 100 players
         List<Player> players = IntStream.range(1, 101)
                 .mapToObj(i -> persistAndReturnEntity(
                         Player.builder()
                                 .name("Player " + i)
                                 .email("player" + i + "@example.com")
+                                .glicko(1000.0 + i) // Assign Glicko ratings for sorting
                                 .build()))
-                .toList();
+                .collect(Collectors.toList());
 
         // Fetch players 50–59 (page index 5, size 10)
-        Player[] paginatedPlayers = playerService.pagination(5, 10);
+        List<Player> paginatedPlayers = playerService.pagination(5, 10);
 
-        assertEquals(10, paginatedPlayers.length);
-        assertEquals(players.get(50).getId(), paginatedPlayers[0].getId()); // First player on page 5
-        assertEquals(players.get(59).getId(), paginatedPlayers[9].getId()); // Last player on page 5
+        // Validate the size of the result
+        assertEquals(10, paginatedPlayers.size());
+
+        // Validate that the players are sorted by Glicko in descending order
+        for (int i = 1; i < paginatedPlayers.size(); i++) {
+            assertTrue(
+                    paginatedPlayers.get(i - 1).getGlicko() >= paginatedPlayers.get(i).getGlicko(),
+                    "Players are not sorted by Glicko in descending order"
+            );
+        }
+
+        // Validate the specific players retrieved
+        assertEquals(1050.0, paginatedPlayers.get(0).getGlicko());
+        assertEquals(1041.0, paginatedPlayers.get(9).getGlicko());
     }
+
 
 
 }
